src/test/deca/context/invalid/operations/arithmetic/invalid_arithmetic_op_plus_bool.deca
// Description:
//    test invalid operation PLUS between bool and int
//    Test rule 3.33
//
// [Begin Result]
//invalid_arithmetic_op_plus_bool.deca:13:15: Unsupported operation '+' between types boolean and int. Operation '+' supported only between integer(s) and(or) float(s). (Rule 3.33)
// [End Result]
//
// Historique:
//    cree le 02/01/2025

{
    print(true + 5);
}